Fri Dec 10 12:18:41 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstcanvaslink.c (bst_canvas_link_build_async): changed 
	arrow outline color from blue to black.

Fri Dec 10 11:29:58 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam.c: provide proper warning if scale/dial widget 
	couldn't be created.

	* beast-gtk/bstscrollgraph.c: options fixup.

Fri Dec 10 11:01:28 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstscrollgraph.[hc]: added ::resize-values signal.
	fixed copying of old values. fixed fft-size check upon probe
	notification. added ruler and alignment resizing logic.

	* beast-gtk/dialogs/radgets-beast.xml: scrollgraph dialog adaptions.

Mon Dec  6 23:40:46 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstrecords.idl: added FFTSize choice.

	* beast-gtk/bstutils.[hc]: added fft-size<->int conversion functions.

	* bstscrollgraph.[hc]: made fft size configurable.

	* beast-gtk/dialogs/radgets-beast.xml: added rulers to scrolgraph, use
	GtkTable for layouting.

	* beast-gtk/dialogs/radgets-standard.xml: added hruler and vruler.

	* beast-gtk/gxk/gxkutils.c: confine popup-menus to screen boundaries.

	* beast-gtk/gxk/gxkmenubutton.c: fixed push-in positioning.

	* beast-gtk/gxk/gxkdialog.c: cleanups.

	* beast-gtk/bstparam-choice.c: fixed empty tooltips.

Fri Dec  3 19:05:27 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c (bst_early_parse_args): stop argument 
	parsing at "--".

	* launchers/suidmain.c (main): check for "--" arguments via a function
	custom_check_arg_stopper() in unpriviledged code.

	* launchers/beaststart.c (custom_check_arg_stopper): check for "--".

	* launchers/bseshstart.c (custom_check_arg_stopper): check for "--",
	"-s" and "-c", because guile stops argument parsing here also.

Fri Dec  3 18:49:28 2004  Tim Janik  <timj@gtk.org>

	* launchers/suidmain.c (main): removed nice level printf from
	unpriviledged code.

	* shell/bsesh.c (shell_parse_args): 
	* beast-gtk/bstmain.c (bst_early_parse_args): simply ignore -N and