@@ -738,11 +738,7 @@ bst_snet_router_root_event (BstSNetRouter   *self,
                   break;
                 case 0: break;
                 default:
-                  dialog = gxk_dialog_new (NULL,
-                                           GTK_OBJECT (self),
-                                           GXK_DIALOG_HIDE_ON_DELETE,
-                                           _("Scrollgraph"),
-                                           bst_scrollgraph_build_dialog ("beast", "scrollgraph-dialog", csource->source, i - monitor_ids));
+                  dialog = bst_scrollgraph_build_dialog (self, csource->source, i - monitor_ids);
                   gtk_widget_show (dialog);
                   break;
                 }
